--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -8,6 +8,7 @@ name: Mark stale issues and pull requests
 on:
   schedule:
   - cron: '36 9 * * *'
+  workflow_dispatch: # Allows manual triggering of this workflow.
 
 jobs:
   stale:
